--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,6 @@
 ---
+import Navbar from '../components/navbar/Navbar.astro';
+import Footer from '../components/footer/Footer.astro';
 import '../styles/global.css';
 ---
 
@@ -7,20 +9,31 @@ import '../styles/global.css';
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-		<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="generator" content={Astro.generator} />
     
-    <title>Home | MailX Redesign</title>
+    <title>MailX Redesign</title>
     <meta name="description" content="Redesign of the MailXpertise homepage with Astro and Tailwind." />
     <meta name="author" content="Jessica Arroyo Lebrón" />
     <meta name="robots" content="index, follow" />
 
   </head>
-	<body class="bg-background">
-		<div class="max-w-[1280px] mx-auto bg-white">
-		<slot />
-	</div>
+	<body>
+      <Navbar />
+      <main class="flex-1">
+        <slot />
+      </main>
+      <Footer />
 	</body>
 </html>
+
+<style>
+  html,
+  body {
+    margin: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+</style>
