--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,30 +1,118 @@
 @import "tailwindcss";
 
 @theme {
-  --font-primary: Inter, sans-serif;
-  --font-secondary: Poppins, sans-serif;
+  --font-fallback:
+    'Adjusted Arial Fallback', system-ui, -apple-system, blinkmacsystemfont, 'Segoe UI',
+    'Noto Sans', helvetica, arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji';
+  --font-primary: 'Poppins';
 
-  --color-primary: #235fa3;    
-  --color-secondary: #ffaf04;  
-  --color-background: #eaeaea;    
-  --color-accent: #abc0e3;   
-  --color-white: #ffffff;   
-  --color-black: #232323;       
-  --color-testimonial: #cef0ff;
-  --color-footer-text: #a7aab1;
+  --color-primary: oklch(0.48 0.1254 254.11);
+  --color-secondary: oklch(0.81 0.1699 75.76);
+  --color-background: oklch(92.06% 0.007 99.44);
+  --color-accent: oklch(0.8 0.0548 260.62);
+  --color-white: oklch(100% 0 0);
+  --color-black: oklch(0.26 0 0);
+  --color-testimonial: oklch(0.94 0.0409 226.27);
+  --color-footer-text: oklch(65.38% 0.014 300.38);
+  --color-footer-background: oklch(0.32 0.1013 259.7);
+  --color-gradient-nav: linear-gradient(
+    90deg,
+    var(--color-primary) 0%,
+    var(--color-footer-background) 100%
+  );
 }
 
-* {
-  box-sizing: border-box;
+@layer base {
+  /* Webkit Browsers (Chrome, Safari, Edge) */
+  ::-webkit-scrollbar {
+    width: 10px;
+  }
+
+  ::-webkit-scrollbar-track {
+    background: var(--color-theme-raisin-black);
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background-color: var(--color-theme-french-mauve);
+    border-radius: 5px;
+    border: 2px solid oklch(0.48 0.1254 254.11 / 0.4);
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: var(--color-theme-tickle-me-pink);
+  }
+
+  /* Firefox */
+  * {
+    scrollbar-color: var(--color-theme-french-mauve) var(--color-theme-raisin-black);
+    scrollbar-width: thin;
+  }
 }
 
-html,
-body {
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  min-height: 100%;
-  font-family: var(--font-primary);
-  scroll-behavior: smooth;
-  line-height: 1.6;
+@font-face {
+  font-family: 'Adjusted Arial Fallback';
+  src: local(Arial);
+  size-adjust: 112%;
+  ascent-override: 74%;
+  descent-override: normal;
+  line-gap-override: normal;
 }
+
+/* Poppins */
+
+@font-face {
+  font-family: 'Poppins';
+  src: url('/fonts/poppins/poppins-v22-latin-regular.woff2') format('woff2');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Poppins';
+  src: url('/fonts/poppins/poppins-v22-latin-500.woff2') format('woff2');
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Poppins';
+  src: url('/fonts/poppins/poppins-v22-latin-600.woff2') format('woff2');
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Poppins';
+  src: url('/fonts/poppins/poppins-v22-latin-700.woff2') format('woff2');
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Poppins';
+  src: url('/fonts/poppins/poppins-v22-latin-800.woff2') format('woff2');
+  font-weight: 800;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Poppins';
+  src: url('/fonts/poppins/poppins-v22-latin-900.woff2') format('woff2');
+  font-weight: 900;
+  font-style: normal;
+  font-display: swap;
+}
+
+
+html {
+  font-family: 'Poppins', var(--font-fallback);
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility;
+}
+
