--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,7 @@
 ---
-import Navbar from '../components/navbar/Navbar.astro';
-import Footer from '../components/footer/Footer.astro';
-import '../styles/global.css';
+import Navbar from '@/components/navbar/Navbar.astro';
+import Footer from '@/components/footer/Footer.astro';
+import '@/styles/global.css';
 ---
 
 <!DOCTYPE html>
