--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -2,9 +2,9 @@
 import Layout from '@/layouts/Layout.astro'
 ---
 
-<Layout title="404 - La Velada del Año V">
+<Layout title="404 - Page Not Found" description="Page not found" class="bg-theme-raisin-black">
   <section
-    class="mask-fade-bottom flex min-h-screen w-full items-center justify-center bg-[url('/images/hero.avif')] bg-cover bg-center text-center"
+    class="mask-fade-bottom flex min-h-screen w-full items-center justify-center bg-cover bg-center text-center"
   >
     <div class="w-full max-w-3xl items-center justify-center">
       <h1 class="text-theme-raisin-black">
@@ -21,7 +21,7 @@ import Layout from '@/layouts/Layout.astro'
       </p>
       <div class="flex min-h-4 items-center justify-center">
         <a
-          href="/"
+          href="/about"
           class="bg-theme-turquoise text-theme-raisin-black flex items-center justify-center rounded-lg px-8 py-4 text-sm font-bold tracking-widest transition-all duration-300 ease-out hover:rotate-[2deg] active:scale-90"
           aria-label="Botón para volver al inicio"
         >
