--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -2,10 +2,13 @@
 import Layout from "@/layouts/Layout.astro";
 import HeroSection  from "@/components/about/HeroSection.astro";
 import IntroSection from "@/components/about/IntroSection.astro";
+import SolutionsSection from "@/components/about/SolutionsSection.astro";
+import PartnersSection from "@/components/about/PartnersSection.astro";
 ---
 
 <Layout>
   <HeroSection />
   <IntroSection />
-  <!-- ... -->
+  <SolutionsSection /> 
+  <PartnersSection />
 </Layout>
