--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import Navbar from '@/components/navbar/Navbar.astro';
 import Footer from '@/components/footer/Footer.astro';
+import BackToTop from '@/components/common/BackToTop.astro';
 import '@/styles/global.css';
 ---
 
@@ -24,6 +25,7 @@ import '@/styles/global.css';
         <slot />
       </main>
       <Footer />
+      <BackToTop />
 	</body>
 </html>
 
