--- a/src/components/about/HeroSection.astro
+++ b/src/components/about/HeroSection.astro
@@ -1,27 +1,24 @@
+---
+import CtaButton from '@/components/common/CtaButton.astro';
+---
+
 <section
-  class="relative h-screen flex items-center justify-center overflow-hidden bg-fixed bg-center bg-cover"
+  class="relative h-screen flex flex-col items-center justify-center overflow-hidden bg-fixed bg-center bg-cover"
 >
   <div
     class="absolute inset-0 bg-gradient-to-br from-primary/80 to-secondary/80"
   >
   </div>
 
-  <div class="relative z-20 text-center px-2 md:px-14 xl:px-52">
-    <h1
-      class="text-4xl sm:text-5xl md:text-6xl lg:text-7xl font-extrabold text-white mb-6"
-    >
-    <span id="typing" class="border-r-4 border-white" aria-live="polite"></span>
+  <div class="relative z-20 text-center mx-auto max-w-screen-xl px-4 sm:px-6 lg:px-10 xl:px-20 flex flex-col items-center justify-center space-y-6">
+    <h1 class="text-4xl sm:text-5xl md:text-6xl lg:text-7xl font-extrabold text-white mb-6 mt-16 leading-[1.1]">
+      <span id="typing" class="border-r-4 border-white" aria-live="polite"></span>
     </h1>
     <p class="text-lg sm:text-xl text-white/80 mb-8 max-w-2xl mx-auto">
       The tailor-made email marketing platform designed to empower marketing
       professionals.
     </p>
-    <a
-      href="#intro"
-      class="inline-block px-8 py-3 bg-white text-gray-900 font-semibold rounded-full shadow-md shadow-blue-500/20 hover:shadow-lg hover:shadow-blue-500/30 transition-shadow duration-200"
-    >
-    Learn more about us
-    </a>
+    <CtaButton href="#intro" text="Our Story" />
   </div>
 
   <div class="absolute inset-0 z-10 pointer-events-none">
