--- a/src/components/about/SolutionsSection.astro
+++ b/src/components/about/SolutionsSection.astro
@@ -11,11 +11,11 @@
     ></div>
   </div>
 
-  <div class="relative z-10 container mx-auto px-4 py-20 md:py-28 lg:py-36">
-    <div class="max-w-5xl mx-auto space-y-6">
+  <div class="text-left relative z-10 container mx-auto max-w-screen-xl px-4 sm:px-6 lg:px-10 xl:px-20 py-20 md:py-28 lg:py-36">
+    <div class="max-w-5xl space-y-6">
       <h2
         id="solutions-heading"
-        class="scroll-reveal font-condensed text-4xl md:text-5xl lg:text-6xl text-white opacity-0"
+        class="scroll-reveal font-condensed text-4xl md:text-5xl lg:text-6xl text-white opacity-0 "
         data-delay="0"
       >
         solutions designed
