--- a/src/components/about/SolutionsSection.astro
+++ b/src/components/about/SolutionsSection.astro
@@ -14,26 +14,27 @@
   <div class="text-left relative z-10 container mx-auto max-w-screen-xl px-4 sm:px-6 lg:px-10 xl:px-20 py-20 md:py-28 lg:py-36">
     <div class="max-w-5xl space-y-6">
       <h2
+        tabindex="0"
         id="solutions-heading"
-        class="scroll-reveal font-condensed text-4xl md:text-5xl lg:text-6xl text-white opacity-0 "
+        class="scroll-reveal font-condensed text-3xl md:text-5xl lg:text-6xl text-white opacity-0 "
         data-delay="0"
       >
         solutions designed
       </h2>
       <h2
-        class="scroll-reveal font-bold text-5xl md:text-6xl lg:text-7xl text-white opacity-0"
+        class="scroll-reveal font-bold text-4xl md:text-6xl lg:text-7xl text-white opacity-0"
         data-delay="200"
       >
         to <span class="text-secondary">optimise</span> delivery,
       </h2>
       <h2
-        class="scroll-reveal font-condensed text-4xl md:text-5xl lg:text-6xl text-white opacity-0"
+        class="scroll-reveal font-condensed text-3xl md:text-5xl lg:text-6xl text-white opacity-0"
         data-delay="400"
       >
         in an environment without
       </h2>
       <h2
-        class="scroll-reveal font-bold text-5xl md:text-6xl lg:text-7xl text-white opacity-0"
+        class="scroll-reveal font-bold text-4xl md:text-6xl lg:text-7xl text-white opacity-0"
         data-delay="600"
       >
         <span class="text-secondary">compromise</span> or restriction.
