--- a/src/components/about/IntroSection.astro
+++ b/src/components/about/IntroSection.astro
@@ -1,9 +1,9 @@
-<section id="intro" class="relative bg-gray-50 py-16 scroll-mt-24">
+<section id="intro" tabindex="-1"  class="relative bg-gray-50 py-16 scroll-mt-24">
   <div class="mx-auto max-w-screen-xl px-4 sm:px-6 lg:px-10 xl:px-20">
-    <h2 class="text-6xl sm:text-8xl font-extrabold text-center mb-12">
+    <h1 tabindex="0"  class="text-6xl sm:text-8xl font-extrabold text-center mb-12">
       <span class="bg-clip-text text-transparent bg-gradient-to-r from-blue-950 via-blue-800 to-cyan-600">About</span>
       <span class="text-yellow-400">.</span>
-    </h2>
+    </h1>
 
     <div class="max-w-7xl mx-auto grid grid-cols-1 lg:grid-cols-2 gap-12 items-start">
 
