--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,14 @@
 ---
-
-import Layout from '@/layouts/Layout.astro';
-
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+import Layout from "@/layouts/Layout.astro";
+import HeroSection  from "@/components/about/HeroSection.astro";
+import IntroSection from "@/components/about/IntroSection.astro";
+import SolutionsSection from "@/components/about/SolutionsSection.astro";
+import PartnersSection from "@/components/about/PartnersSection.astro";
 ---
 
 <Layout>
-
+  <HeroSection />
+  <IntroSection />
+  <SolutionsSection /> 
+  <PartnersSection />
 </Layout>
